[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ovarian_classifier"
version = "0.0.1"
description = "simple classification model"
authors = [
  { name = "Aaisha Ameen" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["ovarian_classifier"]
include = ["pyproject.toml", "ovarian_classifier/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ovarian_classifier"]
force-sort-within-sections = true

